tests/trybuild/resources/type_comma_alone.stderr
error: no rules expected the token `,`
 --> tests/trybuild/resources/type_comma_alone.rs:3:29
  |
3 | type Resources = Resources!(,);
  |                             ^ no rules expected this token in macro call
