tests/trybuild/resources/type_comma_alone.rs
use brood::Resources;

type Resources = Resources!(,);

fn main() {}
